# tensaku

./: .gitignore  README.md  pyproject.toml
tensaku/: __init__.py  tensaku_generator.py
tensaku/notebooks/: new_tensaku.ipynb  test_tesnsaku.ipynb
tensaku/openai_util/: completion.py
tensaku/src/: documents.py  essay.py
tensaku/src/comment_generator/: comment.py
tensaku/src/correction_generator/: correction.py  native_explanation.py
tensaku/src/cyten/: cyten.py
tensaku/src/edit_classifier/: classifier.py  classifier_old.py
tensaku/src/explanation_generator/: general.py  generatorbase.py  grammar.py  spelling.py  unnatural.py  wordchoice.py  wordorder.py
tensaku/src/quiz_generator/: __init__.py  generator.py
tensaku/utils/: document_utils.py  openai_utils.py  translation.py  utils.py
tests/: test_cyten.py  test_generator.py
