[tool.poetry]
name = "tensaku"
version = "0.8.6"
description = ""
authors = ["ShinnosukeUesaka <shinnosuke.uesaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.1.1"
mypy = "^1.4.1"
dacite = "^1.8.1"
retry = "^0.9.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.4"
pytest = "^7.4.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "tensaku"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
